Fix for react select. Clearable tag visible and disabled by options (not css)

--- a/app/assets/stylesheets/_react-select.scss
+++ b/app/assets/stylesheets/_react-select.scss
@@ -128,8 +128,8 @@
 .Select-clear {
   color: #999999;
   cursor: pointer;
-  // display: inline-block;
-  display: none;
+  display: inline-block;
+  // display: none;
   font-size: 16px;
   padding: 6px 10px;
   position: absolute;
